--- a/assets/package.json
+++ b/assets/package.json
@@ -17,14 +17,14 @@
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
-    "node-sass": "^4.12.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.3.1",
     "tailwindcss": "^1.1.2",
     "tailwindcss-typography": "^2.2.0",
-    "uglifyjs-webpack-plugin": "^1.2.4",
+    "terser-webpack-plugin": "^2.1.2",
     "webpack": "4.4.0",
     "webpack-cli": "^2.0.10"
   }
