--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@dkuku/tailwind-color-palette": "^1.0.1",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
@@ -20,7 +21,11 @@
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
+    "purgecss": "^1.4.0",
+    "purgecss-webpack-plugin": "^1.6.0",
     "sass-loader": "^7.3.1",
     "tailwindcss": "^1.1.2",
     "tailwindcss-typography": "^2.2.0",
