--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.0.0",
     "@dkuku/tailwind-color-palette": "^1.0.1",
     "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
@@ -28,6 +29,7 @@
     "purgecss-webpack-plugin": "^1.6.0",
     "sass-loader": "^7.3.1",
     "tailwindcss": "^1.1.2",
+    "tailwindcss-js-plugins": "0.0.12",
     "tailwindcss-typography": "^2.2.0",
     "terser-webpack-plugin": "^2.1.2",
     "webpack": "4.4.0",
