--- a/assets/package.json
+++ b/assets/package.json
@@ -6,6 +6,10 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
   },
@@ -19,6 +23,8 @@
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
+    "fontmin-webpack": "^2.0.4",
+    "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
@@ -28,8 +34,8 @@
     "purgecss": "^1.4.0",
     "purgecss-webpack-plugin": "^1.6.0",
     "sass-loader": "^7.3.1",
+    "svgo": "^1.3.0",
     "tailwindcss": "^1.1.2",
-    "tailwindcss-js-plugins": "0.0.12",
     "tailwindcss-typography": "^2.2.0",
     "terser-webpack-plugin": "^2.1.2",
     "webpack": "4.4.0",
