--- a/assets/package.json
+++ b/assets/package.json
@@ -36,6 +36,7 @@
     "sass-loader": "^7.3.1",
     "svgo": "^1.3.0",
     "tailwindcss": "^1.1.2",
+    "tailwindcss-tables": "^0.4.0",
     "tailwindcss-typography": "^2.2.0",
     "terser-webpack-plugin": "^2.1.2",
     "webpack": "4.4.0",
