--- a/assets/package.json
+++ b/assets/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "cash-dom": "^4.1.5",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
   },
@@ -23,7 +24,6 @@
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
-    "fontmin-webpack": "^2.0.4",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.12.0",
