--- a/assets/package.json
+++ b/assets/package.json
@@ -11,9 +11,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "awesomplete": "^1.1.5",
-    "cash-dom": "^4.1.5",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "stimulus": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
