--- a/assets/package.json
+++ b/assets/package.json
@@ -13,7 +13,7 @@
     "awesomplete": "^1.1.5",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "stimulus": "^1.1.1"
+    "phoenix_live_view": "file:../deps/phoenix_live_view"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
