--- a/assets/package.json
+++ b/assets/package.json
@@ -23,12 +23,12 @@
     "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^0.28.10",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
@@ -40,7 +40,7 @@
     "tailwindcss-tables": "^0.4.0",
     "tailwindcss-typography": "^2.2.0",
     "terser-webpack-plugin": "^2.1.2",
-    "webpack": "4.4.0",
-    "webpack-cli": "^2.0.10"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
