update templates paths

--- a/assets/package.json
+++ b/assets/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "awesomplete": "^1.1.5",
+    "glob-all": "^3.1.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view"
