--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -24,8 +24,7 @@ jobs:
         mix local.rebar --force
         mix local.hex --force
         mix deps.get
-    - name: Elixir actions (Credo, Sobelow and formatting)
-      uses: Nitrino/actions-elixir@v1.0
+        mix ecto.migrate
     - name: Run Tests
       run: |
         mix test
