--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -5,7 +5,10 @@ on: push
 jobs:
   build:
 
-    runs-on: elixir:1.9.4
+    runs-on: ubuntu-latest
+
+    container:
+      image: elixir:1.9.1
       
     services:
       postgres:
