--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -28,6 +28,8 @@ jobs:
         mix local.hex --force
         mix deps.get
         mix ecto.migrate
+      env:
+        DB_HOST: postgres
     - name: Run Tests
       run: |
         mix test
