--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -24,12 +24,14 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install Dependencies
       run: |
+        apt-get install nodejs phantomjs
         mix local.rebar --force
         mix local.hex --force
         mix deps.get
-        mix ecto.migrate
+        npm install --prefix assets
     - name: Run Tests
       run: |
-        mix test
+        phantomjs --wd &
+        WEBDRIVER=phantomjs mix test
       env:
         DB_HOST: postgres
