--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -24,6 +24,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install Dependencies
       run: |
+        echo 'deb http://archive.ubuntu.com/ubuntu bionic universe multiverse' >> /etc/apt/sources.list; apt-get update;
         apt-get install nodejs phantomjs
         mix local.rebar --force
         mix local.hex --force
