--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -24,8 +24,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install Dependencies
       run: |
-        echo 'deb http://archive.ubuntu.com/ubuntu bionic universe multiverse' >> /etc/apt/sources.list; apt-get update;
-        apt-get install nodejs chromium
+        curl -sL https://deb.nodesource.com/setup_10.x -o nodesource_setup.sh
+        sudo bash nodesource_setup.sh
+        apt-get install nodejs chromium-browser
         mix local.rebar --force
         mix local.hex --force
         mix deps.get
