--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install Dependencies
       run: |
         curl -sL https://deb.nodesource.com/setup_10.x -o nodesource_setup.sh
-        sudo bash nodesource_setup.sh
+        bash nodesource_setup.sh
         apt-get install nodejs chromium-browser
         mix local.rebar --force
         mix local.hex --force
