--- a/assets/package.json
+++ b/assets/package.json
@@ -14,9 +14,7 @@
     "glob-all": "^3.1.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "svelte": "^3.17.1",
-    "svelte-loader": "^2.13.6"
+    "phoenix_live_view": "file:../deps/phoenix_live_view"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
