--- a/assets/package.json
+++ b/assets/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "alpinejs": "^1.9.7",
     "awesomplete": "^1.1.5",
     "glob-all": "^3.1.0",
     "phoenix": "file:../deps/phoenix",
@@ -37,7 +38,7 @@
     "purgecss-webpack-plugin": "^1.6.0",
     "sass-loader": "^7.3.1",
     "svgo": "^1.3.0",
-    "tailwindcss": "^1.1.2",
+    "tailwindcss": "^1.2.0-canary.5",
     "tailwindcss-tables": "^0.4.0",
     "tailwindcss-typography": "^2.2.0",
     "terser-webpack-plugin": "^2.1.2",
