--- a/assets/package.json
+++ b/assets/package.json
@@ -6,43 +6,43 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/free-regular-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "alpinejs": "^1.9.7",
-    "awesomplete": "^1.1.5",
-    "glob-all": "^3.1.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "alpinejs": "^2.3.1",
+    "glob-all": "^3.2.1",
+    "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "@dkuku/tailwind-color-palette": "^1.0.1",
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "@tailwindcss/custom-forms": "^0.2.1",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.0",
+    "autoprefixer": "^9.7.6",
+    "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.3",
     "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
-    "purgecss": "^1.4.0",
+    "purgecss": "^1.4.2",
     "purgecss-webpack-plugin": "^1.6.0",
     "sass-loader": "^7.3.1",
     "svgo": "^1.3.0",
-    "tailwindcss": "^1.2.0-canary.5",
+    "tailwindcss": "^1.4.4",
     "tailwindcss-tables": "^0.4.0",
     "tailwindcss-typography": "^2.2.0",
-    "terser-webpack-plugin": "^2.1.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "terser-webpack-plugin": "^2.3.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
